<resources>
    <string name="app_name">SmartBalanjka</string>
    <string name="crash_report">Crash Report</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="my_username">smartbalanjika@gmail.com</string>
    <string name="my_password">believegod</string>
    <string name="Forget"><u>Forget Password?</u></string>
    <string name="Sign"><u>Sign Up for SmartBalanjika</u></string>
    <string name="letstart">Lets Get Start</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="MemberLogin">Member Login</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="mailid">Mail ID</string>
    <string name="mailpassword">Mail Password</string>
    <string name="sendmil">Send Me Mail</string>
    <string name="mailsecurity">Are We Secure?\n Enter the mail details to Login</string>
    <string name="maillogin">Login using MailID</string>
    <string name="CreateAccount">Set Account Details</string>
    <string name="Passwordagain">Password verify</string>
    <string name="createaccount">Create my account</string>
    <string name="Gender">Gender</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="District">District</string>
    <string name="Country">Country</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Blood_Group">Blood Group</string>
    <string name="DOB">DOB</string>
    <string name="Marital_Status">Marital Status</string>
    <string name="Marriage_Date">Marriage Date</string>
    <string name="social">Mail Id,Skype,Twiter,Facebook,WebSite,YouTube,Blog ect.,</string>
    <string name="SayAboutYou">Say About You</string>
    <string name="EnterQuestion">Enter Question</string>
    <string name="EnterAnswer">Enter Answer</string>
    <string name="Matrimony">Matrimony</string>
    <string name="Save">Save</string>
    <string name="Rashi">Rashi</string>
    <string name="Nakthara">Nakthara</string>
    <string name="Qualification">Qualification</string>
    <string name="Work">Work</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="NotesrelatesMatrimony">Notes relates Matrimony</string>
    <string name="NoThanks">No Thanks</string>
    <string name="Reset_header">Smartbalanjika Password Reset</string>
    <string name="Reset_content">We have just received a password reset request for </string>
    <string name="Reset_subcontent">Your secure password is:  </string>
    <string name="Reset_toast">Mail send success.\nCheck your mail. The Password has send to your mail</string>
    <string name="NotReset_toast">Your mail id is not registered. Please check your mail id is correct and if correct please register your mail first</string>
    <string name="newaccount_header">Welcome SmartBalanjika</string>
    <string name="newaccount_content">I would like to create a new account. Please add my mail ID is: </string>
    <string name="alreadyaccount_toast">This mailID is already registered. Please use new MailId or enter Login page to login</string>
    <string name="samepassword_toast">Please enter same password</string>
    <string name="weekpassword_toast">Your Password is week. Please enter more than 6 char</string>
    <string name="Exit">Do you really want to Exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="correct_toast">Please enter correct Username and Password</string>
    <string name="usernameblank_toast">Username should not be blank</string>
    <string name="passwordblank_toast">Password should not be blank</string>
    <string name="ur_mailid">Mail Id :</string>
    <string name="ur_name">Name    : </string>
    <string name="KDHeader">My Event is: </string>
    <string name="KDaccount_content">Event Details are \n</string>
    <string name="awardHeader">My Son/Daughter scored good marks. I would like to add marks of: </string>
    <string name="awardaccount_content">My Son/Daughter scored: </string>
    <string name="healthHeader">Recipe Title: </string>
    <string name="healthaccount_content">Recipe Content:</string>
    <string name="helpHeader">Hello, I would like to Help you:</string>
    <string name="helpBody">My Suggestion is:\n</string>
    <string name="editaccount_header">Edit User for SmartBalanjika</string>
    <string name="editaccount_content">I would like to edit my account details in SmartBalanjika. Can u please change my details.\nMy account details are\n</string>
    <string name="addaccount_header">New User for SmartBalanjika</string>
    <string name="addaccount_content">I would like to add my account details in SmartBalanjika. Can u please add my details.\nMy account details are\n</string>
    <string name="removeaccount_header">Delete Matrimony for SmartBalanjika</string>
    <string name="removeaccount_content">I would like to Delete my account details og Matrimony in SmartBalanjika. Can u please Delete my details in Matrimony List.\nMy account details are\n</string>
    <string name="nochange_toast">There is nothing to save.</string>
    <string name="blank_toast">Please enter all details. Should not be blank</string>
    <string name="Select_Gender">Select Gender</string>
    <string name="Select_Nakthara">Select Nakthara</string>
    <string name="Select_Rashi">Select Rashi</string>
    <string name="Select_BloodGroup">Select BloodGroup</string>
    <string name="Select_Country">Select Country</string>
    <string name="Select_Status">Select Status</string>
    <string name="married">married</string>
    <string name="Loading">Loading&#8230;&#8230;&#8230;</string>
    <string name="History">History</string>
    <string name="Contacts">Contacts</string>
    <string name="Donar">Donar</string>
    <string name="KD">Kg Drv</string>
    <string name="Events">Birthday</string>
    <string name="Matrimonys">Matrimony</string>
    <string name="Books">Books</string>
    <string name="Health">Health</string>
    <string name="Help">Help</string>
    <string name="Logout">Logout</string>
    <string name="register">Register</string>
    <string name="history_content">Dasabalanjikans realise that all the men including children wear a “Nama” on their forehead . This represents that they are the followers of Lord Vishnu. When we look at the castism in the Hindu community during that time in Karnataka , there were 2 sects of people. One were the follower of Lord Shiva  called “Sharanaru”  and the other were the followers of Lord Vishnu called “Dasaru“. These two group of people were devoted their lives to religious activities towards their respective gods. Since our community people were followers of Lord Vishnu we fall under the group of dasaru. They were not only just religious followers but also were leading merchants during their time and these merchants were called Banajigaru / Balijigaru by the locals in that period.  Since they were Dasaru and Banajigaru / Balijigaru  the name Dasabanajigaru / Dasabalijigaru came into existence. These name over a period of time became Dasabalanjiga when our community people moved from Karnataka into Tamil Nadu during the 1780′s.
    \n\n Now general look at what speciality inside is?</string>
    <string name="Contacts_content">There is a list of contacts. you can make use of it and know the entire details about our relatives in detailed.</string>
    <string name="Donar_content">There is a list of contacts who wish to donate their blood. It will be more use on the emergency.
    \n\nThere is also a list of doctors contacts who wish to give the emergency guide and suggesion at the critical stage.
    \n\nWe also provide some contacts of hospitals which can be use at the time of emergency</string>
    <string name="KD_content">Here are some tips for the school students,College students,also for working persons about the future</string>
    <string name="Events_content">We Provide the Birthday reminder of our relatives.</string>
    <string name="Matrimony_content">Matrimony: Useful for one who seraching for their partner. Here we list of all relatives contacts and details who searching for their partner</string>
    <string name="Books_content">You can read and download the Youth balanjika Book</string>
    <string name="Health_content">General tips for the heath and also some details about health recipe tips</string>
    <string name="Help_content">One who wish to improve this service can send some valuable tips and feedback. So thus it will be very helpful to improve our smart balanjika service</string>
    <string name="KDrive">Knowledge Drive</string>
    <string name="More">Click here for More>></string>
    <string name="problemifany">If any problem or any suggestions feel free to contact us</string>
    <string name="Name">Name</string>
    <string name="my_name">Sindhu Rajesh</string>
    <string name="india">India Number</string>
    <string name="india_no">+91 9790659680</string>
    <string name="malatsia">Malaysia Number</string>
    <string name="malatsia_no">+60 146250626, +60 162682728</string>
    <string name="mail_feedback">Sending your valuable Feedback through email is always welcome.</string>
    <string name="feedback_title">Title(About)</string>
    <string name="feedback_content">Type in your Feedback</string>
    <string name="feedback_Compose">Compose</string>
    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="please_wait">please wait</string>
    <string name="one_of">1 of</string>
    <string name="of">of</string>
    <string name="contactus_toast">Enter valuable commands. Fields should not be empty</string>
    <string name="Personal_Details">Personal Details</string>
    <string name="Age">Age</string>
    <string name="HeightAndWeight">Height And Weight</string>
    <string name="BloodList">Blood List</string>
    <string name="DoctorsList">Doctors List</string>
    <string name="ICEList">ICE List</string>
    <string name="Awards">Awards</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="Blood_Type">Blood Type</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Directions">Directions</string>
    <string name="Venue">Venue</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Contact">Contact</string>
    <string name="Specification">Specification</string>
    <string name="Other_Details">Other Details</string>
    <string name="Event_Type">Event Type</string>
    <string name="No_Event">No Event</string>
    <string name="Select_blood">Select Blood Group</string>
    <string name="choose_email">Choose an email client from&#8230;&#8230;&#8230;</string>
    <string name="No_email">No email client installed.</string>
    <string name="website">http://www.youthbalanjika.com/</string>
    <string name="bookwebsite">https://sites.google.com/site/youthbalanjika/</string>
    <string name="table_Awards">Awards</string>
    <string name="table_Profile">Profile</string>
    <string name="table_kd">kd</string>
    <string name="table_Health">Health</string>
    <string name="table_ICE">ice</string>
    <string name="event_type">Select Event type</string>
    <string name="add_recipe">Add New Recipe</string>
    <string name="add_recipetitle">Enter Recipe Name</string>
    <string name="add_recipe_Ingredients">Enter List of Ingredients</string>
    <string name="add_recipe_directions">Method to prepare</string>
</resources>