<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/woman_face"
       />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ur_name"
            />
            <TextView
                android:id="@+id/myNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/mailid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ur_mailid"
                />
            <TextView
                android:id="@+id/mailidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
            </LinearLayout>
</LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_accountdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
 <LinearLayout
     android:id="@+id/layoutregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    <EditText
        android:id="@+id/gender"
        
        android:layout_marginTop="10dp"
         android:hint="@string/Gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        
    </EditText>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/Address"

         android:inputType="textPostalAddress"
        android:ems="10" >
</EditText>
    <EditText
        android:id="@+id/City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/City"
        android:ems="10" />

    <EditText
        android:id="@+id/District"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/District"
        android:ems="10" />

    <EditText
        android:id="@+id/Country"
          android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
         android:hint="@string/Country"
        />

    

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Phone_Number"
        
        android:inputType="phone" />

    <EditText
        android:id="@+id/Blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/Blood_Group" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DOB"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:ems="10" />
 <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Marital_Status"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:ems="10" />
  <EditText
        android:id="@+id/statusdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Marriage_Date"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:ems="10" />
    <EditText
        android:id="@+id/Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/social"
        android:ems="10" />

    <EditText
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SayAboutYou"
        android:inputType="textMultiLine" />
    
    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/EnterQuestion"
        android:ems="10" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/EnterAnswer"
        android:ems="10" />
    
    
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:weightSum="2"
        android:orientation="horizontal" >
        <Button
        android:id="@+id/matrimony"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Matrimony" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Save" />
    </LinearLayout>
     <LinearLayout
         android:id="@+id/layoutunregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
<EditText
        android:id="@+id/Rashi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
         android:hint="@string/Rashi" />

    <EditText
        android:id="@+id/Nakthara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
         android:hint="@string/Nakthara" />

    <EditText
        android:id="@+id/Qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/Qualification"
        android:ems="10" />

    <EditText
        android:id="@+id/Work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:hint="@string/Work"
        android:ems="10" />

    <EditText
        android:id="@+id/Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Height"
        android:inputType="phone" 
        android:ems="10" />

    <EditText
        android:id="@+id/Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Weight"
        android:inputType="phone" 
        android:ems="10" />


    <EditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NotesrelatesMatrimony"
        android:ems="10" />
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:weightSum="2"
        android:orientation="horizontal" >
        <Button
        android:id="@+id/nothanks"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NoThanks" />

    <Button
        android:id="@+id/unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Save" />
    </LinearLayout>
    </LinearLayout>
     


   
   
    
    </LinearLayout>
    </ScrollView>

</LinearLayout>