<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/problemifany"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_blue"
                android:text="@string/problemifany"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_gravity="center"
                android:orientation="vertical" >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Name" />
                    <TextView
                        android:id="@+id/name_full"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_name" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/India"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/india" />
                    <TextView
                        android:id="@+id/ind_number"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/india_no" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/Malaysia"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/malatsia" />
                    <TextView
                        android:id="@+id/malaysia_number"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/malatsia_no" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal" >
                    <TextView
                        android:id="@+id/Mail"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mailid" />

                    <TextView
                        android:id="@+id/mail_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_username" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/mail_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="12dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/dark_blue"
                android:text="@string/mail_feedback"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/subject_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/feedback_title" />
                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:background="@drawable/roundrectanglewhite"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:ems="10"
                    android:hint="@string/feedback_title" />
                <TextView
                    android:id="@+id/body_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/feedback_content" />
                <EditText
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="8dp"
                    android:gravity="top|left"
                    android:background="@drawable/roundrectanglewhite"
                    android:ems="10"
                    android:maxLines="10"
                    android:paddingLeft="10dp"
                    android:hint="@string/feedback_content"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/sendEmail"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/feedback_Compose"
                    android:textSize="20dp"
                    android:onClick="sendmail"
                    android:background="@drawable/buttonshape"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

</ScrollView>
</LinearLayout>