<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@drawable/login_background"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/newhealthtitle"
            android:layout_weight="1.5"
            android:hint="@string/add_recipetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:layout_gravity="center"
            android:background="@drawable/roundrectanglewhite"
            android:ems="10"
            android:maxLines="10"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textMultiLine" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:textColor="@color/blue"
        android:text="@string/Ingredients" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/newhealthIngredients"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="top|left"
            android:background="@drawable/roundrectanglewhite"
            android:ems="10"
            android:maxLines="10"
            android:paddingLeft="10dp"
            android:hint="@string/add_recipe_Ingredients"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_margin="10dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/blue"
        android:layout_marginLeft="5dp"
        android:text="@string/Directions" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/newdirections"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="top|left"
            android:background="@drawable/roundrectanglewhite"
            android:ems="10"
            android:maxLines="10"
            android:paddingLeft="10dp"
            android:hint="@string/add_recipe_directions"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:layout_margin="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <Button
            android:id="@+id/addrecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="existinglogin"
            android:text="@string/add_recipe"
            android:textSize="25dp"
            android:background="@drawable/buttonshape" />

    </LinearLayout>
</LinearLayout>
</ScrollView>